Parse/MiniJava.java
/* MiniJava.java */
/* Generated By:JavaCC: Do not edit this line. MiniJava.java */
package Parse;
import java.util.LinkedList;
public class MiniJava implements MiniJavaConstants {

/********************/
/* MiniJava Grammar */
/********************/

// Goal 	::= 	MainClass ( ClassDeclaration | ThreadDeclaration )* <EOF>
  final public Absyn.Program Goal() throws ParseException {LinkedList<Absyn.ClassDecl> cl = new LinkedList<Absyn.ClassDecl>();
    MainClassDeclaration(cl);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      if (jj_2_1(2147483647)) {
        ClassDeclaration(cl);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CLASS:{
          ThreadDeclaration(cl);
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(0);
{if ("" != null) return new Absyn.Program(cl);}
    throw new Error("Missing return statement in function");
}

// MainClass 	::= 	"class" Identifier "{" "public" "static" "void" "main" "(" "String" "[" "]" Identifier ")" "{" Statement "}" "}"
  final public Absyn.ClassDecl MainClassDeclaration(LinkedList<Absyn.ClassDecl> cl) throws ParseException {Absyn.ClassDecl cd;
        Absyn.Stmt stmt;
        Absyn.VarDecl var;
        Token name, arg;
        LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
        LinkedList<Absyn.Formal> formals = new LinkedList<Absyn.Formal>();
        LinkedList<Absyn.VarDecl> locals = new LinkedList<Absyn.VarDecl>();
        LinkedList<Absyn.Stmt> stmts = new LinkedList<Absyn.Stmt>();
    jj_consume_token(CLASS);
    name = jj_consume_token(ID);
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(String);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    arg = jj_consume_token(ID);
formals.add(new Absyn.Formal(new Absyn.ArrayType(new Absyn.IdentifierType("String")),arg.toString()));
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_2;
      }
      var = VarDeclaration();
locals.add(var);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FALSE:
      case IF:
      case NEW:
      case NULL:
      case TRUE:
      case WHILE:
      case BANG:
      case MINUS:
      case LPAREN:
      case LBRACE:
      case XINU:
      case INTEGER_LITERAL:
      case STRING_LITERAL:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
methods.add(new Absyn.MethodDecl(null, false, "main", formals, locals, stmts, (new Absyn.IntegerLiteral(0))));
                cd = new Absyn.ClassDecl(name.toString(), null,  new LinkedList<Absyn.VarDecl>(), methods);
                cl.add(cd);
                {if ("" != null) return cd;}
    throw new Error("Missing return statement in function");
}

// ClassDeclaration 	::= 	"class" Identifier ( "extends" Identifier )? "{" ( VarDeclaration )* ( MethodDeclaration )* "}"
  final public Absyn.ClassDecl ClassDeclaration(LinkedList<Absyn.ClassDecl> cl) throws ParseException {Absyn.ClassDecl  cd;
        Absyn.MethodDecl md;
        Absyn.VoidDecl   vd;
        Absyn.VarDecl    fd;
        Token name = null, parent = null;
        String parStr = null;
        LinkedList<Absyn.VarDecl> fields     = new LinkedList<Absyn.VarDecl>();
        LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
    jj_consume_token(CLASS);
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EXTENDS:{
      jj_consume_token(EXTENDS);
      parent = jj_consume_token(ID);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(LBRACE);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUBLIC:
      case VOID:
      case BOOLEAN:
      case INT:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      if (jj_2_3(2147483647)) {
        fd = FieldDeclaration();
fields.add(fd);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PUBLIC:{
          md = MethodDeclaration();
methods.add(md);
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(RBRACE);
cd = new Absyn.ClassDecl(name.toString(), parent.toString(), fields, methods);
                  cl.add(cd);
                  {if ("" != null) return cd;}
    throw new Error("Missing return statement in function");
}

// ThreadDeclaration 	::= 	"class" Identifier "extends" "Thread" "{" ( VarDeclaration )* ( MethodDeclaration | RunDeclaration )* "}"
  final public Absyn.ThreadDecl ThreadDeclaration(LinkedList<Absyn.ClassDecl> cl) throws ParseException {Absyn.ThreadDecl cd;
        Absyn.MethodDecl md;
        Absyn.VoidDecl   vd;
        Absyn.VarDecl    fd;
        Token name = null;
        String parStr = null;
        LinkedList<Absyn.VarDecl> fields     = new LinkedList<Absyn.VarDecl>();
        LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
    jj_consume_token(CLASS);
    name = jj_consume_token(ID);
    jj_consume_token(EXTENDS);
    jj_consume_token(THREAD);
    jj_consume_token(LBRACE);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUBLIC:
      case VOID:
      case BOOLEAN:
      case INT:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_5;
      }
      if (jj_2_4(2147483647)) {
        fd = FieldDeclaration();
fields.add(fd);
      } else if (jj_2_5(2)) {
        vd = VoidDeclaration();
methods.add(vd);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PUBLIC:{
          md = MethodDeclaration();
methods.add(md);
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(RBRACE);
cd = new Absyn.ThreadDecl(name.toString(), fields, methods);
                cl.add(cd);
                {if ("" != null) return cd;}
    throw new Error("Missing return statement in function");
}

// VarDeclaration 	::= 	Type Identifier ( = Expression )? ";"
  final public Absyn.VarDecl VarDeclaration() throws ParseException {Absyn.Type type = null;
        Token      name = null;
        Absyn.Expr init = null;
    type = Type();
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIGN:{
      jj_consume_token(ASSIGN);
      init = Expression();
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(SEMICOLON);
{if ("" != null) return new Absyn.VarDecl(type, name.toString(), init);}
    throw new Error("Missing return statement in function");
}

// MethodDeclaration 	::= 	"public" ( "synchronized" )? Type Identifier "(" ( Type Identifier ( "," Type Identifier )* )? ")" "{" ( VarDeclaration )* ( Statement )* "return" Expression ";" "}"
  final public Absyn.MethodDecl MethodDeclaration() throws ParseException {Absyn.Type returnType, paramType;
        Token methodName, paramName;
//	Absyn.Formal formal;
        Absyn.VarDecl var;
        Absyn.Stmt stmt;
        Absyn.Expr expr;
        boolean sync = false;
        LinkedList<Absyn.Formal> formals  = new LinkedList<Absyn.Formal>();
        LinkedList<Absyn.VarDecl> locals  = new LinkedList<Absyn.VarDecl>();
        LinkedList<Absyn.Stmt> stmts      = new LinkedList<Absyn.Stmt>();
    jj_consume_token(PUBLIC);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYNCHRONIZED:{
      jj_consume_token(SYNCHRONIZED);
sync = true;
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    returnType = Type();
    methodName = jj_consume_token(ID);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VOID:
    case BOOLEAN:
    case INT:
    case ID:{
      paramType = Type();
      paramName = jj_consume_token(ID);
formals.add(new Absyn.Formal(paramType, paramName.toString()));
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_6;
        }
        jj_consume_token(COMMA);
        paramType = Type();
        paramName = jj_consume_token(ID);
formals.add(new Absyn.Formal(paramType, paramName.toString()));
      }
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_7:
    while (true) {
      if (jj_2_6(2147483647)) {
        ;
      } else {
        break label_7;
      }
      var = VarDeclaration();
locals.add(var);
    }
    label_8:
    while (true) {
      if (jj_2_7(2147483647)) {
        ;
      } else {
        break label_8;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(RETURN);
    expr = Expression();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
{if ("" != null) return new Absyn.MethodDecl(returnType, sync, methodName.toString(), formals, locals, stmts, expr);}
    throw new Error("Missing return statement in function");
}

// VoidDeclaration 	::= 	"public" "void" Identifier "(" ( Type Identifier ( "," Type Identifier )* )? ")" "{" ( VarDeclaration )* ( Statement )* "}"
  final public Absyn.VoidDecl VoidDeclaration() throws ParseException {Token methodName = null;
        Absyn.VarDecl var;
        Absyn.Stmt stmt;
        LinkedList<Absyn.VarDecl> locals  = new LinkedList<Absyn.VarDecl>();
        LinkedList<Absyn.Stmt> stmts      = new LinkedList<Absyn.Stmt>();
    jj_consume_token(PUBLIC);
    jj_consume_token(VOID);
    methodName = jj_consume_token(ID);
    jj_consume_token(LPAREN);
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_9:
    while (true) {
      if (jj_2_8(2147483647)) {
        ;
      } else {
        break label_9;
      }
      var = VarDeclaration();
locals.add(var);
    }
    label_10:
    while (true) {
      if (jj_2_9(2147483647)) {
        ;
      } else {
        break label_10;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(RBRACE);
{if ("" != null) return new Absyn.VoidDecl(methodName.toString(), locals, stmts);}
    throw new Error("Missing return statement in function");
}

// FieldDeclaration 	::= 	Type Identifier ";"
  final public Absyn.VarDecl FieldDeclaration() throws ParseException {Absyn.Type type;
        Token name;
    type = Type();
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIGN:{
      jj_consume_token(ASSIGN);
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    jj_consume_token(SEMICOLON);
{if ("" != null) return new Absyn.VarDecl(type, name.toString(), null);}
    throw new Error("Missing return statement in function");
}
